# dsV2Gshark

./: LICENSE  OSSAcknowledgements.txt  README.md  update_version.bat
.github/workflows/: build.yml
Installer/: Build_Installer.bat  InstallerScript.iss  strings.isl
V2G_Libraries/: build_all_linux.sh  build_all_win.bat  build_for_ws.bat  build_macos.sh
V2G_Libraries/CertificateInfos/: .gitignore  main.rc  makefile  makefile_linux
V2G_Libraries/V2GDecoder/: .gitignore  main.rc  makefile  makefile_linux
V2G_Libraries/battery-data-exchange/: Cargo.toml
V2G_Libraries/battery-data-exchange/.cargo/: config.toml
V2G_Libraries/battery-data-exchange/src/: decoder.rs  lib.rs  lua_bindings.rs  scanner.rs  types.rs  validator.rs
V2G_Libraries/battery-data-exchange/xtask/: Cargo.toml
V2G_Libraries/battery-data-exchange/xtask/src/: main.rs
V2G_Libraries/v2gLib/: build_all_linux.sh  build_for_ws.bat  build_macos.sh  main.rc  makefile  makefile_linux  makefile_macos
Wireshark/: .gitignore
Wireshark/dsV2Gshark_examples/: DIN_DC_DS5366_Josev.pcapng  IEC61851_AC_PWM_Basic.pcapng  ISO-20_BPT_AC_DS5366_Josev.pcapng  ISO-20_TLS13_DC_DS5366_Josev.pcapng  ISO-20_mTLS_DC_DS5366_Josev.pcapng  ISO-2_AC_DS5366.pcapng  ISO-2_AC_PnC_TLS_Contract_MeteringReceipt_DS5366_RiseV2G.pcapng  ISO-2_DC_BatteryDataExchange_DS5366_RiseV2G.pcapng  ISO-2_DC_DS5366.pcapng  ISO-2_DC_Pause_DS5366.pcapng  ISO-2_DC_PnC_TLS_CertInstallation_DS5366_RiseV2G.pcapng  ISO-2_DC_PnC_TLS_CertUpdate_DS5366_RiseV2G.pcapng  ISO-2_DC_PnC_TLS_Contract_DS5366_RiseV2G.pcapng  README.md  (+3 more)
(+32 files in other folders)
